--- a/src/components/mobileNav/mobileNav.css
+++ b/src/components/mobileNav/mobileNav.css
@@ -5,7 +5,7 @@
     align-content: center;
     justify-content: center;
     bottom: 0px;
-    height: 60px;
+    /* height: 60px; */
 }
 
 .ion-icon-container {
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-content: center;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 15px;
 
 }
 
@@ -27,7 +27,7 @@ ion-icon {
 }
 
 .Mobile-nav-labels {
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .button {
